--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *{
   box-sizing: border-box;
 }
 
 header {
   background: #0C0052 !important;
+}
+
+.custom-breadcrumb  a {
+  color: #0000004D!important;
+  text-decoration: none!important;
+  font-weight: 300!important;
+  font-size:'14px'!important;
+}
+
+.custom-breadcrumb a:hover {
+  color: #0000004D!important;
+  text-decoration: underline!important;
 }
