--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@ header {
   background: #0C0052 !important;
 }
 
+body {
+  background: #EDEDED;
+}
 .custom-breadcrumb  a {
   color: #0000004D!important;
   text-decoration: none!important;
@@ -26,4 +29,8 @@ header {
 .custom-breadcrumb a:hover {
   color: #0000004D!important;
   text-decoration: underline!important;
+}
+
+[class^="awsui_root"] > [class^="awsui_input_"] {
+  background: #3D3375 !important;
 }
